--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -9,6 +9,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:textColor="@color/black"
+        android:layout_margin="20dp"
+        android:padding="10dp"
+        android:text="تطبيق لـمّة
+
+تطبيق متخصص ببيع منتجات التجمعات العائلية والمكتبية.
+
+تطبيق لـمّة يتميز بتقديم باقة متنوعه من المنتجات ضمن منصه واحده
+
+يتميز تطبيق لـمّة بتوفير باقة من المنتجات مثل المكسرات والبهارات الخاصة والتمور و الشوكولاته و المأكولات الجافة مثل البيتيفور و الكيك و غيرها.
+
+تطبيق لـمّة يوفر منتجات حديثة التجهيز و التصنيع و التحميص و على الطلب.
+
+تطبيق لـمّة يتميز بخدمه التوصيل السريع والذي لا يتجاوز ال ٦ ساعات ضمن المدن التي يشملها عمل التطبيق" />
 
 </FrameLayout>
