--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#DD6E6D</color>
     <color name="red_red">#FB0001</color>
     <color name="green">#528F58</color>
+    <color name="blue">#4B6DA6</color>
 </resources>
