--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/splash_new"
     tools:context=".ui.activities.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/splash_new"
+        android:layout_height="wrap_content"
         android:id="@+id/rel">
 
         <LinearLayout
@@ -21,7 +21,7 @@
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="130dp"
-                android:background="@drawable/lammah"
+                android:background="@drawable/logo_png"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"/>
         </LinearLayout>
@@ -91,6 +91,8 @@
             android:id="@+id/ed_password"
             android:layout_marginTop="50dp"
             android:paddingEnd="5dp"
+            android:gravity="end"
+            android:layout_gravity="end"
             android:hint="كلمة المرور"
             android:inputType="textPassword"
             android:drawableEnd="@drawable/ic_lock_black_24dp"
@@ -119,9 +121,9 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginTop="70dp"
             android:background="@color/colorPrimary"
             android:text="تسجيل الدخول"
@@ -165,56 +167,19 @@
                 android:text="ليس لديك حساب ؟"/>
         </LinearLayout>
 
-        <TextView
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginTop="20dp"
-            android:text="تسجيل الدخول بواسطة"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="@color/black"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:gravity="center"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="15dp">
+            android:background="@color/blue"
+            android:text=" تسجيل الدخول باستخدام الفيس بوك"
+            android:id="@+id/btn_register_face"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:id="@+id/img_instagram"
-                android:background="@drawable/instagram"/>
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:id="@+id/img_twitter"
-                android:background="@drawable/twitter"/>
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:id="@+id/img_facebook"
-                android:background="@drawable/facebook_three"/>
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:id="@+id/img_google_plus"
-                android:background="@drawable/google_plus"/>
-        </LinearLayout>
     </LinearLayout>
     </RelativeLayout>
 
