--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,20 +12,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/user_defualt_img"
-            android:id="@+id/img_register"/>
 
         <EditText
             android:id="@+id/input_username"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             android:paddingEnd="10dp"
             android:background="@drawable/login_field_design"
             android:inputType="textPersonName"
@@ -39,9 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:paddingStart="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="50dp"
             android:paddingEnd="10dp"
             android:background="@drawable/login_field_design"
             android:hint="البريد الالكتروني"
@@ -55,18 +48,46 @@
             android:hint="رقم الهاتف"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/login_field_design"
+            tools:ignore="RtlSymmetry" />
+
+        <EditText
+            android:id="@+id/input_pass"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:hint="كلمة المرور"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/login_field_design"
+            tools:ignore="RtlSymmetry" />
+
+        <EditText
+            android:id="@+id/input_con_password"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:hint="تاكيد كلمه المرور"
+            android:paddingStart="10dp"
+            android:gravity="end|center_vertical"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            android:inputType="textPassword"
+            android:layout_marginEnd="50dp"
+            android:paddingEnd="10dp"
             android:background="@drawable/login_field_design"
             tools:ignore="RtlSymmetry" />
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="35dp"
             android:layout_marginTop="40dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginStart="50dp"
             android:background="@color/colorPrimaryDark"
             android:text="@string/save"
             android:textSize="18sp"
