--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -6,35 +6,28 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="الرئيسية"/>
+            android:icon="@drawable/ic_person_black_24dp"
+            android:title="صفحتي الشخصية"/>
+
+        <item
+            android:id="@+id/nav_orderHistory"
+            android:icon="@drawable/ic_history_black_24dp"
+            android:title="طلباتي" />
+
         <item
             android:id="@+id/nav_favorite"
             android:icon="@drawable/heart"
             android:title="المفضلة" />
 
         <item
-            android:id="@+id/nav_categories"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="التصنيفات" />
-        <item
-            android:id="@+id/nav_orderHistory"
-            android:icon="@drawable/ic_history_black_24dp"
-            android:title="السجل" />
-        <item
-            android:id="@+id/nav_star"
-            android:icon="@drawable/ic_star_black_24dp"
-            android:title="أعلى التقييمات" />
-
-        <item
-            android:id="@+id/nav_most_sales"
-            android:icon="@drawable/ic_attach_money_black_24dp"
-            android:title="معظم المبيعات" />
-
-        <item
             android:id="@+id/nav_about_us"
             android:icon="@drawable/ic_help_outline_black_24dp"
-            android:title="معلومات عنا" />
+            android:title="عنا" />
+
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_exit_to_app_black_24dp"
+            android:title="تسجيل الخروج" />
     </group>
 
 </menu>
