--- a/app/src/main/res/layout/fragment_confirm.xml
+++ b/app/src/main/res/layout/fragment_confirm.xml
@@ -11,6 +11,14 @@
         android:orientation="vertical">
 
 
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:id="@+id/sp_city">
+
+        </Spinner>
+
         <EditText
             android:id="@+id/ed_address"
             android:layout_width="match_parent"
