--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,12 +27,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ViewFlipper
+            <com.daimajia.slider.library.SliderLayout
+                android:id="@+id/main_slider"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:id="@+id/imageSlider_flip">
+                android:layout_height="180dp"
+                android:scaleType="fitXY">
 
-            </ViewFlipper>
+            </com.daimajia.slider.library.SliderLayout>
 
         </android.support.v7.widget.CardView>
 
