--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="130dp"
-                android:background="@drawable/logo_png"
+                android:background="@drawable/lammah"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"/>
         </LinearLayout>
@@ -174,6 +174,7 @@
             android:layout_marginEnd="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
+            android:visibility="gone"
             android:background="@color/blue"
             android:text=" تسجيل الدخول باستخدام الفيس بوك"
             android:id="@+id/btn_register_face"
