--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,24 +18,20 @@
         android:orientation="vertical"
         android:background="@drawable/layout_design">
 
-        <android.support.v7.widget.CardView
-            android:layout_marginTop="32dp"
-            app:cardCornerRadius="6dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
             <com.daimajia.slider.library.SliderLayout
                 android:id="@+id/main_slider"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/curv"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:scaleType="fitXY">
 
             </com.daimajia.slider.library.SliderLayout>
 
-        </android.support.v7.widget.CardView>
 
         <TextView
             android:layout_width="match_parent"
